--- a/QuoteNanime/index.html
+++ b/QuoteNanime/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/QuoteNanime_Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
     <title>QuoteNanime</title>
   </head>
   <body>
